=== 0.7.2
* Added Lobbyist::V2::MasterCustomerCall

=== 0.7.1
* Added charge method to Lobbyist::V2::CommunicationCampaign
* Added campaign_enabled attr_accessor to Lobbyist::V2::AccountLevel

=== 0.7.0
* Added the search endpoint to CustomerCalls.

=== 0.6.32
* moved Lobbyist::V1:CustomerCalls controller to Lobbyist::V2:CustomerCalls

=== 0.6.31
* added insights attr_accessor to Lobbyist::V2::Company

=== 0.6.30
* added insights method to Lobbyist::V2::Company

=== 0.6.29
* Added current_balance to CommunicationCampaign

=== 0.6.28
* Removed references to recommended_budget and monthly_budget columns

=== 0.6.27
* Added field :tax_exempt to Promo

=== 0.6.26
* changing all the *_budget columns to *_credits

=== 0.6.25
* remove field :top_five_customers

=== 0.6.24
* remove fields :enable_referral_marketing, :enable_retention_marketing, :sugar_lead_id,
and :sugar_opportunity_id from Lobbyist::Company and Lobbyist::V2::Company

=== 0.6.23

* remove fields :exclude_referral_marketing, :exclude_retention_marketing, :auto_review_draft_key from Lobbyist::V2::Contact and Lobbyist::Contact

=== 0.6.22

* Added split_* fields to V1 and V2 company models.

=== 0.6.21

* Added token_acquired_at, fetch_frequency, data_processing_enabled attributes for ScottySetting

=== 0.6.20

* Added retry count attribute to data uploads.

=== 0.6.19

* Added iterations_count attributes for Lobbyist::V2::CommunicationCampaign

=== 0.6.18

* Added destroy method from Lobbyist::V2::CommunicationCampaign

=== 0.6.17

* Added connection_* attributes for ScottySetting

=== 0.6.16

* Added new smart invite setting attributes for custom smart invites.

=== 0.6.15

* Added some new attributes to V2::Customer to support the member area action menus.

=== 0.6.14

* Added Company User parameter to company create method for V2.

=== 0.6.13

* Added DirectConnectMileage and DirectConnectVehicle for vehicle data processing.

=== 0.6.12
