@@ -90,6 +90,7 @@ require 'lobbyist/v2/category'
 require 'lobbyist/v2/category_insight_metrics'
 require 'lobbyist/v2/communication_campaign'
 require 'lobbyist/v2/communication_piece'
+require 'lobbyist/v2/company_customer_call'
 require 'lobbyist/v2/company_metrics'
 require 'lobbyist/v2/company_place'
 require 'lobbyist/v2/company_setting'
